--- a/7th-week.ipynb
+++ b/7th-week.ipynb
@@ -47,13 +47,14 @@
     "with open(\"aws_apikey.txt\", \"r\") as f:\n",
     "    api_key = f.read().strip()\n",
     "\n",
+    "table_name = \"DynamoDB-Kakao-MiroMentis-userUtterance\"\n",
     "\n",
     "# 현재 UTC 시간을 ISO 8601 포맷으로 가져오기\n",
     "current_time = datetime.now(timezone.utc).astimezone().isoformat()\n",
     "\n",
     "# 업로드할 데이터: DynamoDB 'put_item' 메소드에 필요한 데이터 구조 예시\n",
     "data = {\n",
-    "    \"TableName\": \"DynamoDB-Kakao-MiroMentis-userUtterance\",\n",
+    "    \"TableName\": table_name,\n",
     "    \"Item\": {\n",
     "        \"UserID\": {\"S\": \"user_1234\"},\n",
     "        \"message\": {\"S\": \"Hello, DynamoDB!\"},\n",
@@ -90,7 +91,7 @@
    "source": [
     "# GET 요청에 사용될 쿼리 매개변수\n",
     "params = {\n",
-    "    'TableName': \"DynamoDB-Kakao-MiroMentis-userUtterance\",\n",
+    "    'TableName': table_name,\n",
     "    'Key': json.dumps({\n",
     "        'UserID': {'S': 'user_1234'},\n",
     "        'Timestamp': {'S': current_time}\n",
@@ -120,7 +121,7 @@
    "source": [
     "# PUT 요청에 사용될 JSON 본문\n",
     "data = {\n",
-    "    'TableName': \"DynamoDB-Kakao-MiroMentis-userUtterance\",\n",
+    "    'TableName': table_name,\n",
     "    'Key': {\n",
     "        'UserID': {'S': 'user_1234'},\n",
     "        'Timestamp': {'S': current_time}  # 'current_time'은 해당 시간으로 설정되어야 함\n",
@@ -155,7 +156,7 @@
    "source": [
     "# DELETE 요청에 사용될 JSON 본문\n",
     "data = {\n",
-    "    'TableName': \"DynamoDB-Kakao-MiroMentis-userUtterance\",\n",
+    "    'TableName': table_name,\n",
     "    'Key': {\n",
     "        'UserID': {'S': 'user_1234'},\n",
     "        'Timestamp': {'S': current_time}  # 'current_time'은 해당 시간으로 설정되어야 함\n",
