8th-week update

--- a/7th-week/7th-week.ipynb
+++ b/7th-week/7th-week.ipynb
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"ResponseMetadata\": {\"RequestId\": \"PF4K33QGLJLSR70PH3S27A6AKVVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Sat, 11 May 2024 15:43:06 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"2\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"PF4K33QGLJLSR70PH3S27A6AKVVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"2745614147\"}, \"RetryAttempts\": 0}}\n"
+      "{\"ResponseMetadata\": {\"RequestId\": \"R488OHEK6ICVDISBGFRKP0DPKBVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Mon, 13 May 2024 11:29:48 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"2\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"R488OHEK6ICVDISBGFRKP0DPKBVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"2745614147\"}, \"RetryAttempts\": 0}}\n"
      ]
     }
    ],
@@ -39,15 +39,15 @@
     "import requests\n",
     "import json\n",
     "from datetime import datetime, timezone\n",
+    "import os\n",
     "\n",
     "# API 엔드포인트 URL\n",
-    "url = \"https://kvw58iapmc.execute-api.ap-northeast-2.amazonaws.com/default/Lambda-DynamoDB-Uploader\"\n",
+    "url = \"CRUD Lambda URL\"\n",
     "\n",
     "# API 키\n",
-    "with open(\"aws_apikey.txt\", \"r\") as f:\n",
-    "    api_key = f.read().strip()\n",
+    "OPENAI_API_KEY = os.environ(\"OPENAI_API_KEY\")\n",
     "\n",
-    "table_name = \"DynamoDB-Kakao-MiroMentis-userUtterance\"\n",
+    "table_name = \"DynamoDB Table Name\"\n",
     "\n",
     "# 현재 UTC 시간을 ISO 8601 포맷으로 가져오기\n",
     "current_time = datetime.now(timezone.utc).astimezone().isoformat()\n",
@@ -65,7 +65,7 @@
     "# 헤더에 API 키 포함\n",
     "headers = {\n",
     "    \"Content-Type\": \"application/json\",\n",
-    "    \"x-api-key\": api_key\n",
+    "    \"x-api-key\": OPENAI_API_KEY\n",
     "}\n",
     "\n",
     "# POST 요청 보내기\n",
@@ -77,14 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"Item\": {\"UserID\": {\"S\": \"user_1234\"}, \"Timestamp\": {\"S\": \"2024-05-11T15:00:38.049181+00:00\"}, \"message\": {\"S\": \"Hello, DynamoDB!\"}, \"UserKey\": {\"S\": \"YourUserKeyValue\"}}, \"ResponseMetadata\": {\"RequestId\": \"R0C85E7JS558C0OD2H9C2C3B07VV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Sat, 11 May 2024 15:32:51 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"160\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"R0C85E7JS558C0OD2H9C2C3B07VV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"3053834789\"}, \"RetryAttempts\": 0}}\n"
+      "{\"Item\": {\"UserID\": {\"S\": \"user_1234\"}, \"Timestamp\": {\"S\": \"2024-05-13T11:29:47.729878+00:00\"}, \"message\": {\"S\": \"Hello, DynamoDB!\"}}, \"ResponseMetadata\": {\"RequestId\": \"26M8O1NPB3A5KS9Q50R290D4U3VV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Mon, 13 May 2024 11:31:37 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"125\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"26M8O1NPB3A5KS9Q50R290D4U3VV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"2367583918\"}, \"RetryAttempts\": 0}}\n"
      ]
     }
    ],
@@ -107,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"Attributes\": {\"UserKey\": {\"S\": \"YourUserKeyValue\"}}, \"ResponseMetadata\": {\"RequestId\": \"JR6ACKQFOFTO5R7D7K2PAVIDMBVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Sat, 11 May 2024 15:30:03 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"51\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"JR6ACKQFOFTO5R7D7K2PAVIDMBVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"1301518788\"}, \"RetryAttempts\": 0}}\n"
+      "{\"Attributes\": {\"UserKey\": {\"S\": \"YourUserKeyValue\"}}, \"ResponseMetadata\": {\"RequestId\": \"24BEOJ53HEAM1RORAENOVJMHABVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Mon, 13 May 2024 11:33:31 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"51\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"24BEOJ53HEAM1RORAENOVJMHABVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"1301518788\"}, \"RetryAttempts\": 0}}\n"
      ]
     }
    ],
@@ -142,14 +142,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"ResponseMetadata\": {\"RequestId\": \"LSGV21OUTBV7JLGNPNNB95UJJFVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Sat, 11 May 2024 15:43:19 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"2\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"LSGV21OUTBV7JLGNPNNB95UJJFVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"2745614147\"}, \"RetryAttempts\": 0}}\n"
+      "{\"ResponseMetadata\": {\"RequestId\": \"4TR7MUFH8EGBM8K3QMJ9DKDD6RVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"HTTPStatusCode\": 200, \"HTTPHeaders\": {\"server\": \"Server\", \"date\": \"Mon, 13 May 2024 11:34:03 GMT\", \"content-type\": \"application/x-amz-json-1.0\", \"content-length\": \"2\", \"connection\": \"keep-alive\", \"x-amzn-requestid\": \"4TR7MUFH8EGBM8K3QMJ9DKDD6RVV4KQNSO5AEMVJF66Q9ASUAAJG\", \"x-amz-crc32\": \"2745614147\"}, \"RetryAttempts\": 0}}\n"
      ]
     }
    ],
